tests/errors/semantics/no_valid_scope_to_jmp_out_of.odl
main :: () -> void  {
    if true {
        break;
    };
};